--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Title</title>
-        <link rel="shortcut icon" href="./assets/img/favicon.png" type="image/x-icon" />
+        <title>Frontend Mentor | Social Links Profile</title>
+        <link rel="shortcut icon" href="./assets/img/favicon-32x32.png" type="image/x-icon" />
         <!------ Librerias de Estilos ------>
         <!-- Estilos Propios -->
         <link rel="stylesheet" href="./assets/css/main.css" />
@@ -19,31 +19,34 @@
     <body>
         <div class="layout">
             <!------------------------------- Header ------------------------------->
-            <header>
-		<div class="container-12 bg-dark m-1 p-2">
-                    <div class="row bg-info m-1 p-2">
-                        <div class="col-lg-6 col-sm-12 text-center bg-secondary p-2">
-                            <div class="p-2 bg-primary">Custom column padding</div>
+
+            <!------------------------------- Main --------------------------------->
+            <main>
+                <div class="row">
+                    <div class="col">
+                        <div class="img-col">
+                            <img src="./assets/img/avatar-jessica.jpeg" alt="" />
                         </div>
-                        <div class="col-lg-6 col-sm-12 text-center bg-secondary p-2">
-                            <div class="p-2 bg-primary">Custom column padding</div>
+                        <div class="name-col">
+                            <h2>Jessica Randall</h2>
+                        </div>
+                        <div class="country-col">
+                            <h5>London, United Kingdom</h5>
+                        </div>
+                        <div class="details-col">
+                            <p>"Front-end developer and avid reader."</p>
+                        </div>
+                        <div class="social-media-col">
+                            <button type="button">GitHub</button>
+                            <button type="button">Frontend Mentor</button>
+                            <button type="button">Linkedln</button>
+                            <button type="button">Twitter</button>
+                            <button type="button">Instagram</button>
                         </div>
                     </div>
                 </div>
-	    </header>
-            <!------------------------------- Main --------------------------------->
-            <main>main</main>
+            </main>
             <!------------------------------- Footer ------------------------------->
-            <footer>footer</footer>
         </div>
-        <!------ Librerias JavaScrit ------>
-	<!-- JavaScrit Propios -->
-        <script src="./assets/js/main.js"></script>
-        <!-- JavaScrit Bootstrap -->
-        <script
-            src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-            integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-            crossorigin="anonymous"
-        ></script>
     </body>
 </html>
